# grape

./: .gitignore  README.md  grape_timeline_big_model.py  grape_timeline_production.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: generate_screenshots.py  screenshot_view.inputs.sha256
grape/: __main__.py  cache.py  cli.py  hf_cache.py  model.py  search.py
scripts/: fix_mtimes.py
tests/: conftest.py  generate_fixtures.py  test_cache.py  test_cli.py  test_docs.py  test_lint.py  test_model.py  test_model_unit.py  test_search.py  test_view.py
tests/fixtures/: CREDITS.md
