[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grape"
version = "0.1.0"
description = "Find images matching keywords using CLIP. Like grep, but for images."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Mike Graham", email = "mikegraham@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "open-clip-torch>=2.24.0",
    "torch>=2.0.0",
    "dask>=2024.5.0",
    "Pillow>=9.0.0",
    "platformdirs>=3.0",
    "tqdm>=4.60",
    "transformers>=4.49.0",
    "sentencepiece>=0.2.0",
    "Jinja2>=3.1",
    "pywebview>=6.1",
]

[project.optional-dependencies]
# Compatibility alias: view deps are now installed by default.
view = []
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
include = ["grape*"]

[project.scripts]
grape = "grape.cli:main"

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    # coverage
    "--cov=grape",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "slow: tests that download/load the CLIP model",
]

[tool.coverage.report]
exclude_lines = [
    "log\\.(debug|info|warning|error)",
    "pragma: no cover",
]

# --- ruff ---
[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

# --- mypy ---
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
